--- a/index.html
+++ b/index.html
@@ -8,22 +8,43 @@
 </head>
 <body>
     <div id="nav">
-        <img src="logo.png" alt="">
+        <img src="images/logo1.jpg" alt="" style="border-radius: 50%;">
         <a href="#"><h6 class="Fo">HOME</h6></a>
         <a href="#"><h6 class="Fo">ABOUT</h6></a>
         <a href="#"><h6 class="Fo">PROJECTS</h6></a>
     </div>
     <div id="cursor"></div>
     <div id="cursor-blur"></div>
-    <video muted autoplay loop  src="Supra_MK4_short_edit(4K).webm"></video>
+    
     <div id="main">
         <div id="page1">
             <h1>MY NAME IS SYED ATEEF.</h1>
             <h2>WELCOME TO MY PORTFOLIO!</h2>
-            <P>Hey there currently am pursing my BE degree in RYMEC which is located in Bellary and simultaneously practicing my front adn back end development and for that i am building this</P>
+            <P>Hey there currently am pursing my BE degree in RYMEC which is located in Bellary and simultaneously practicing my front and back end development.</P>
         </div>
         <div id="page2">
-
+                <div id="scroller">
+                    <div id="scroll-in">
+                        <h4>    THE LESS</h4>
+                        <h4>YOU SHOW</h4>
+                        <h4>THE HIGH</h4>
+                        <h4>YOU GO</h4>
+                    </div>
+                    <div id="scroll-in">
+                        <h4>THE LESS</h4>
+                        <h4>YOU SHOW</h4>
+                        <h4>THE HIGH</h4>
+                        <h4>YOU GO. </h4>&lsqb;
+                    </div>
+                </div>
+        </div>
+        <div id="aboutme">
+            <img src="images/aboutus1.jpg" alt="">
+            <div id="aboutmein">
+                <h3>ABOUT ME</h3>
+                <P>A fearless individual who gains even more courage when others deem them overly confident.</P>
+            </div>
+            <img src="images/aboutus2.jpg" alt="">
         </div>  
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js" integrity="sha512-16esztaSRplJROstbIIdwX3N97V1+pZvV33ABoG1H2OyTttBxEGkTsoIVsiP1iaTtM8b3+hu2kB6pQ4Clr5yug==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
