--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <a href="#"><h6 class="Fo">ABOUT</h6></a>
         <a href="#"><h6 class="Fo">PROJECTS</h6></a>
     </div>
+    <video autoplay  muted loop src="Supra_MK4_short_edit(4K).webm"></video>
     <div id="cursor"></div>
     <div id="cursor-blur"></div>
     
