the main commit

--- a/index.html
+++ b/index.html
@@ -93,9 +93,9 @@
         <h2>ABOUT MY COLLEGE</h2>
     </div>
     <div id="anime">
-        <img src="images/pexels-ayna-18097907.jpg"  class="anime1" alt="">
+        <!-- <img src="images/pexels-ayna-18097907.jpg"  class="anime1" alt="">
         <img src="images/pexels-dibakar-roy-13742915.jpg" class="anime1" alt="">
-        <img src="images/pexels-luke-miller-19068893.jpg" class="anime1" alt="">
+        <img src="images/pexels-luke-miller-19068893.jpg" class="anime1" alt=""> -->
     </div>
     <div id="main1">
         <div id="page4">
@@ -132,7 +132,21 @@
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Facilis eaque, ipsa voluptate dolorem veniam odio quaerat est. Porro eveniet numquam iste harum, natus, similique quae unde sed illum nisi officiis?</p>
                 </div>
             </div>
+            
         </div>
+        <div class="rating"> 
+            <h2 style="color: #fff; font-size: 20px;"> How is my experience?</h2>
+            <div class="stars">
+            <div class="star"></div>
+            <div class="star"></div>
+            <div class="star"></div>
+            <div class="star" style="background-color: grey;"></div>
+            <div class="star" style="background-color: grey;"></div>
+        </div>
+        </div>
+        </div>
+        <div id="page5">
+
         </div>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
