--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
             <h2>WELCOME TO MY PORTFOLIO!</h2>
             <P>Hey there currently am pursing my BE degree in RYMEC which is located in Bellary and simultaneously practicing my front and back end development.</P>
             <div id="icons">
-                <div id="insta"><a href="https://www.instagram.com/one_autumn_leaf5/"><i class="fa-brands fa-instagram fa-2xl "  ></i></i></a></div>
-                <div id="twitter"><a href="https://www.instagram.com/one_autumn_leaf5/"><i class="fa-brands fa-twitter fa-2xl" ></i></a></div>
-                <div id="linkedin"><a href="https://www.instagram.com/one_autumn_leaf5/"><i class="fa-brands fa-linkedin-in fa-2xl" ></i></a></div>
+                <div id="insta"><a href="https://www.instagram.com/one_autumn_leaf5/"><i class="fa-brands fa-instagram fa-xl "  ></i></i></a></div>
+                <div id="twitter"><a href="https://www.instagram.com/one_autumn_leaf5/"><i class="fa-brands fa-twitter fa-xl" ></i></a></div>
+                <div id="linkedin"><a href="https://www.instagram.com/one_autumn_leaf5/"><i class="fa-brands fa-linkedin-in fa-xl" ></i></a></div>
             </div>
         </div>
         <div id="page2">
@@ -153,7 +153,16 @@
         </div>
         </div>
         <div id="page5">
-<h1 style="color: #fff; text-align: center;">THE SITE IS UNDER DEVELOPMENT</h1>
+            <div id="quote">
+            <div id="upquote">
+                <img src="images/quote3.png" alt="">
+            </div>
+            <div id="contquote">
+                <h4>The college plays a crucial role in acquiring knowledge from our surroundings, discovering novel concepts, and engaging in enjoyable activities with fellow students. Simultaneously, it emphasizes the significance of studying not just to pass exams, but to truly learn. Experiencing the joy of learning while successfully passing exams is an incredible feeling. However, if we prioritize enjoyment over studying and end up failing, it will undoubtedly lead to regret.</h4>
+            </div>
+            <div id="downquote">
+                <img src="images/quote3.png" alt="">
+            </div>
         </div>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
