--- a/index.html
+++ b/index.html
@@ -100,8 +100,8 @@
         <h2>ABOUT MY COLLEGE</h2>
     </div>
     <div id="anime" >
-        <img src="https://scontent.fblr4-1.fna.fbcdn.net/v/t1.6435-9/124165228_1059402607814456_4768711664292869364_n.jpg?_nc_cat=109&ccb=1-7&_nc_sid=300f58&_nc_ohc=hB19m-6H-qoAX8gdf4c&_nc_ht=scontent.fblr4-1.fna&oh=00_AfDgEyk-BRVUyD1tNqqyXvt7mWCo29EVA1IhP2UYHkKttg&oe=6585A487"  class="anime1" alt="">
-        <img src="https://scontent.fblr4-1.fna.fbcdn.net/v/t39.30808-6/302165270_467651192039212_3068537580107930327_n.jpg?_nc_cat=102&ccb=1-7&_nc_sid=5f2048&_nc_ohc=8bxzBuR10oIAX8tyYjK&_nc_ht=scontent.fblr4-1.fna&oh=00_AfD9PbMitPpdAZT-K9tbGWEWNWNE2Xew0JOcQOC_MhS-mg&oe=65637D25" class="anime1" alt="">
+        <img src="https://images.unsplash.com/photo-1613255675041-7422f2927f48?q=80&w=1887&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"  class="anime1" alt="">
+        <img src="https://images.unsplash.com/photo-1596813366843-4a0f41a9538e?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" class="anime1" alt="">
         
     </div>
     <div id="main1">
